# django_kinopoisk

./: manage.py  pyproject.toml
authentication/: models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
django_kinopoisk/: asgi.py  settings.py  urls.py  wsgi.py
kino/: models.py  serializer.py  urls.py  views.py
kino/migrations/: 0001_initial.py
